--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "check:encoding": "powershell -NoProfile -ExecutionPolicy Bypass -File scripts/check-encoding.ps1",
     "preview": "vite preview"
   },
 
